--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,15 @@
     package="com.example.bloodbank">
 
     <application
+        android:name=".BloodApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".BloodApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.activity.MainActivity"></activity>
         <activity android:name=".ui.activity.WelcomeActivity" />
         <activity android:name=".ui.activity.AuthenticationActivity" />
         <activity
