--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bloodbank">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name=".BloodApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        android:supportsRtl="false"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.MainActivity"></activity>
+        tools:ignore="GoogleAppIndexingWarning,UnusedAttribute">
+        <activity android:name=".ui.activity.MainActivity"/>
         <activity android:name=".ui.activity.WelcomeActivity" />
         <activity android:name=".ui.activity.AuthenticationActivity" />
         <activity
